# bernina-embroidery-files-tool

./: .clang-format  .gitignore  README.md  meson.build
include/: mainwindow.h
src/: main.cpp  mainwindow.cpp
